# ci-exercise-cl5516

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py
src/unc/: __init__.py
tests/: test_import.py  test_stdunc.py
