
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unc"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    'typing_extensions; python_version<"3.11"',
]

[dependency-groups]
test = ["pytest", "uncertainties"]
docs = ["sphinx", "furo", "myst_parser", "sphinx-markdown-builder"]
